Painting Overlay update issue with node texture #39435

Closed
opened 2014-03-26 17:12:42 +01:00 by Leon Cheung · 9 comments
Member

System Information
Win7 64bit |FX2700M

Blender Version
Broken: 2.70 Hash: b4d259f
Worked: (optional)

Short description of error
When using node texture for painting, the overlay doesn't always update accordingly after tweaking in node editor, which means you have to tweak something or somewhere to have it updated finally, or just reopen .blend files to have it displayed correctly.

update_issue.png

Exact steps for others to reproduce the error
Example file for easy analysis:

node_texture_overlay.blend

NOTE: As far as I see, it may not actually effect the final paint result, but might be "unpredictable" sometimes.

Thanks for checking!

**System Information** Win7 64bit |FX2700M **Blender Version** Broken: 2.70 Hash: b4d259f Worked: (optional) **Short description of error** When using node texture for painting, the overlay doesn't always update accordingly after tweaking in node editor, which means you have to tweak something or somewhere to have it updated finally, or just reopen .blend files to have it displayed correctly. ![update_issue.png](https://archive.blender.org/developer/F82676/update_issue.png) **Exact steps for others to reproduce the error** Example file for easy analysis: [node_texture_overlay.blend](https://archive.blender.org/developer/F82678/node_texture_overlay.blend) NOTE: As far as I see, it may not actually effect the final paint result, but might be "unpredictable" sometimes. Thanks for checking!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Antonis Ryakiotakis was assigned by Lukas Tönne 2014-03-27 09:28:29 +01:00
Member

Added subscribers: @Psy-Fi, @LukasTonne

Added subscribers: @Psy-Fi, @LukasTonne
Member

@Psy-Fi Not so familiar with the paint brush code. Texture nodes are generally stupid, could also involve depsgraph.

@Psy-Fi Not so familiar with the paint brush code. Texture nodes are generally stupid, could also involve depsgraph.

This issue was referenced by blender/blender-addons-contrib@688257d1a2

This issue was referenced by blender/blender-addons-contrib@688257d1a28e980e058b702520aac4885668f0fd

This issue was referenced by 688257d1a2

This issue was referenced by 688257d1a28e980e058b702520aac4885668f0fd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 688257d1a2.

Closed by commit 688257d1a2.

@LukasTonne, I have found out that we have lots of memory leaks in texture node editor.

I think it is related to ntreeTexBeginExecTree / ntreeTexEndExecTree.

Those two get called many times from different threads and could easily clear data through race conditions. I think it may be a good idea to do locked reference counting for this to work better?

@LukasTonne, I have found out that we have lots of memory leaks in texture node editor. I think it is related to ntreeTexBeginExecTree / ntreeTexEndExecTree. Those two get called many times from different threads and could easily clear data through race conditions. I think it may be a good idea to do locked reference counting for this to work better?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39435
No description provided.