Fix T39435 paint overlay not always getting correctly refreshed.

Initialize the nodetree first, like paint stroke does.